color contrast/accessibility issues

--- a/ideo.css
+++ b/ideo.css
@@ -85,7 +85,7 @@ body.case-ideo {
   --ideo-line: #d8d8d8;
   --ideo-paper: #fbfaf6;
   --ideo-soft: #f2f0ea;
-  --ideo-teal: #009cab;
+  --ideo-teal: #005e66;
   --ideo-red: #cf2f40;
   --ideo-orange: #f15b36;
   --ideo-yellow: #f0cf45;
